...
    android:gravity="center_horizontal"

    android:id="@+id/linearLayout2">


    <EditText
        android:id="@+id/user"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="90dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="109dp" />

    <Button
        android:id="@+id/loginbut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="doLogin"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619"
        tools:layout_conversion_absoluteHeight="40dp"
...
